--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[build-system]
+requires = [
+    'setuptools>=59.5.0',
+    'wheel',
+    'Cython>=0.29.0,<3.0.0',
+    'numpy>=1.19.0'
+]
+
 [tool.black]
 line-length = 79
 include = '\.pyi?$'
