--- a/setup.cfg
+++ b/setup.cfg
@@ -24,13 +24,20 @@ install_requires =
 
 [options.packages.find]
 where=src
-exclude=
-    data
 
 [options.package_data]
 * = *.md, *.txt
-satsmooth = detect/*.so
-    smooth/*.so
+satsmooth = anc/*.pyx
+    anc/*.pxd
+    anc/*.pyx
+    anc/*.pyd
+    detect/*.pyx
+    detect/*.so
+    detect/*.pyd
+    preprocessing/*.pyx
     preprocessing/*.so
-    testing/*.so
+    preprocessing/*.pyd
+    smooth/*.pyx
+    smooth/*.so
+    smooth/*.pyd
     utils/*.pxd
